
Tue Jan 16 13:36:45  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* lib/odbccp32.def: Apply Danny Smith patch 102442
	2000-11-20  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	New file.

Tue Jan 16 12:45:20  2001  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/odbcinst.h: Apply Danny Smith patch 102441
	2000-11-20  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>
	New file.

Mon Dec 25 12:22:19 2000  Christopher Faylor <cgf@cygnus.com>

	* lib/Makefile.in: Don't make "links" to include/w32api directory.

Wed Dec 20 13:34:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winbase.h: Add prototype for SetSecurityDescriptorControl.

Mon Dec 11 13:11:36 2000  Christopher Faylor <cgf@cygnus.com>

	* lib/Makefile.in: Install headers and libraries in tooldir.

2000-12-04  Danny Smith  <danny_r_smith_2001@yahoo.co.nz>

	* include/winnls.h: NORM_IGNORE* remove duplicate defines. 
	SORT_STRINGSORT: ditto. 
	CMAP*: ditto. 
	CTRY_*: add new defines. 
	LGRPID_*: ditto. 
	LCMAP*: change defines to hex notation. 
	CALID: change from ULONG to DWORD. 
	CALTYPE: ditto. 
	_cpinfoex[AW]: add structure. 
	FoldString: correct Unicode mappings. 
	GetCPInfoEx[AW]: add prototypes. 
	EnumCalendarInfoEx[AW]: ditto. 
	EnumDateFormatsEx[AW]: ditto. 
	EnumSystemLanguageGroups[AW]: ditto. 
	EnumLanguageGroupLocales[AW]: ditto. 
	EnumUILanguages[AW]: ditto. 
	GetSystemDefaultUILanguage[AW]: ditto. 
	GetUserDefaultUILanguage[AW]: ditto. 
	IsValidLanguageGroup[AW]: ditto. 
	CALINFO_ENUMPROCEX[AW]: add function pointer typedef 
	LANGUAGEGROUP_ENUMPROC[AW]: ditto 
	LANGGROUPLOCALE_ENUMPROC[AW]: ditto 
	UILANGUAGE_ENUMPROC[AW]: ditto 
	DATEFMT_ENUMPROCEX[AW]: ditto 
	LPCURRENCYFMT[AW]: add structure pointer typedef 
	LPNUMBERFMT[AW]: ditto 

Sun Dec 02 14:21:02 2000  Matt Hargett <matt@use.net>

	* include/winbase.h: Added a define for INVALID_SET_FILE_POINTER, a 
	possible return code for the SetFilePointer() win32 API call.
